Add exp008 & exp009: 最高スコア達成と完璧なアンサンブル挑戦
- exp008: Advanced Feature Engineering で最高スコア 0.78468 達成！
- exp009: Perfect Ensemble (6モデル) で 0.78229、exp008には及ばず
- README.md に実験結果を追加更新
- 両実験のnotebookとresultファイルを追加

--- a/titanic/experiments/exp005/exp005.ipynb
+++ b/titanic/experiments/exp005/exp005.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-08-26T05:14:14.236239Z",
@@ -112,7 +112,7 @@
     "    exp004 + exp005追加特徴量による強化版特徴量エンジニアリング\n",
     "    \"\"\"\n",
     "    df = df.copy()\n",
-    "    \n",
+    "\n",
     "    # ========== exp004の特徴量エンジニアリング ==========\n",
     "    # 名前からの特徴量\n",
     "    df['Title'] = df['Name'].str.extract(r' ([A-Za-z]+)\\.')\n",
@@ -125,97 +125,97 @@
     "    }\n",
     "    df['Title_Grouped'] = df['Title'].map(title_mapping).fillna('Other')\n",
     "    df['Name_Length'] = df['Name'].str.len()\n",
-    "    \n",
+    "\n",
     "    # 苗字と家族サイズ\n",
     "    df['Surname'] = df['Name'].str.split(',').str[0]\n",
     "    all_surnames = pd.concat([train_df['Name'], test_df['Name']]).str.split(',').str[0]\n",
     "    surname_counts = all_surnames.value_counts()\n",
     "    df['Surname_Count'] = df['Surname'].map(surname_counts)\n",
-    "    \n",
+    "\n",
     "    # チケット特徴量\n",
     "    df['Ticket_Length'] = df['Ticket'].str.len()\n",
     "    df['Ticket_IsNumeric'] = df['Ticket'].str.isnumeric().astype(int)\n",
     "    df['Ticket_Prefix'] = df['Ticket'].str.extract(r'^([A-Za-z]+)').fillna('NUMERIC')\n",
-    "    \n",
+    "\n",
     "    all_tickets = pd.concat([train_df['Ticket'], test_df['Ticket']])\n",
     "    ticket_counts = all_tickets.value_counts()\n",
     "    df['Ticket_Count'] = df['Ticket'].map(ticket_counts)\n",
-    "    \n",
+    "\n",
     "    # 客室特徴量\n",
     "    df['HasCabin'] = (~df['Cabin'].isnull()).astype(int)\n",
     "    df['Cabin_Deck'] = df['Cabin'].str.extract(r'^([A-Za-z])').fillna('Unknown')\n",
     "    df['Cabin_Number'] = df['Cabin'].str.extract(r'(\\d+)').astype(float)\n",
     "    df['Cabin_Count'] = df['Cabin'].fillna('').str.split().str.len()\n",
     "    df.loc[df['Cabin'].isnull(), 'Cabin_Count'] = 0\n",
-    "    \n",
+    "\n",
     "    # 基本前処理\n",
     "    df['Sex_Binary'] = df['Sex'].map({'female': 0, 'male': 1})\n",
     "    df['Age'] = df.groupby(['Sex', 'Pclass'])['Age'].transform(lambda x: x.fillna(x.median()))\n",
     "    df['Fare'] = df.groupby('Pclass')['Fare'].transform(lambda x: x.fillna(x.median()))\n",
     "    df['Embarked'] = df['Embarked'].fillna('S')\n",
-    "    \n",
+    "\n",
     "    # 家族構成\n",
     "    df['FamilySize'] = df['SibSp'] + df['Parch'] + 1\n",
     "    df['IsAlone'] = (df['FamilySize'] == 1).astype(int)\n",
     "    df['IsSmallFamily'] = ((df['FamilySize'] >= 2) & (df['FamilySize'] <= 4)).astype(int)\n",
     "    df['IsLargeFamily'] = (df['FamilySize'] > 4).astype(int)\n",
-    "    \n",
+    "\n",
     "    # 年齢・運賃グループ\n",
-    "    df['Age_Group'] = pd.cut(df['Age'], bins=[0, 12, 18, 25, 35, 50, 65, 100], \n",
+    "    df['Age_Group'] = pd.cut(df['Age'], bins=[0, 12, 18, 25, 35, 50, 65, 100],\n",
     "                           labels=['Child', 'Teen', 'Young', 'Adult', 'Middle', 'Senior', 'Elder'])\n",
     "    df['Fare_Group'] = pd.qcut(df['Fare'], q=8, labels=['F1', 'F2', 'F3', 'F4', 'F5', 'F6', 'F7', 'F8'])\n",
-    "    \n",
+    "\n",
     "    # 基本交互作用\n",
     "    df['Sex_Pclass'] = df['Sex_Binary'] * df['Pclass']\n",
     "    df['Age_Fare_Interaction'] = df['Age'] * df['Fare']\n",
     "    df['Age_FamilySize'] = df['Age'] * df['FamilySize']\n",
-    "    \n",
+    "\n",
     "    # 統計特徴量\n",
     "    df['Age_Rank_SexPclass'] = df.groupby(['Sex_Binary', 'Pclass'])['Age'].rank(pct=True)\n",
     "    df['Fare_Rank_Pclass'] = df.groupby('Pclass')['Fare'].rank(pct=True)\n",
-    "    \n",
+    "\n",
     "    # ========== exp005の新特徴量 ==========\n",
-    "    \n",
+    "\n",
     "    # 1. 3次交互作用特徴量（数値化）\n",
-    "    df['Sex_Pclass_AgeGroup'] = (df['Sex_Binary'].astype(str) + '_' + \n",
-    "                                df['Pclass'].astype(str) + '_' + \n",
+    "    df['Sex_Pclass_AgeGroup'] = (df['Sex_Binary'].astype(str) + '_' +\n",
+    "                                df['Pclass'].astype(str) + '_' +\n",
     "                                df['Age_Group'].astype(str))\n",
-    "    \n",
-    "    df['Title_Pclass_Embarked'] = (df['Title_Grouped'] + '_' + \n",
-    "                                  df['Pclass'].astype(str) + '_' + \n",
+    "\n",
+    "    df['Title_Pclass_Embarked'] = (df['Title_Grouped'] + '_' +\n",
+    "                                  df['Pclass'].astype(str) + '_' +\n",
     "                                  df['Embarked'])\n",
-    "    \n",
+    "\n",
     "    # 2. PassengerId順序特徴量\n",
     "    df['PassengerId_Rank'] = df['PassengerId'] / df['PassengerId'].max()\n",
     "    df['PassengerId_Group'] = pd.qcut(df['PassengerId'], q=10, labels=False, duplicates='drop')\n",
-    "    \n",
+    "\n",
     "    # 3. 客室関連高度特徴量\n",
     "    df['Deck_Class_Interaction'] = df['Cabin_Deck'] + '_' + df['Pclass'].astype(str)\n",
     "    df['Deck_Age_Interaction'] = df['Cabin_Deck'] + '_' + df['Age_Group'].astype(str)\n",
-    "    \n",
+    "\n",
     "    # 4. 運賃の相対的位置\n",
     "    df['Fare_Pclass_Rank'] = df.groupby('Pclass')['Fare'].rank(pct=True)\n",
     "    df['Fare_Embarked_Rank'] = df.groupby('Embarked')['Fare'].rank(pct=True)\n",
-    "    \n",
+    "\n",
     "    # 5. Title基準の偏差特徴量\n",
     "    title_age_mean = df.groupby('Title_Grouped')['Age'].transform('mean')\n",
     "    df['Age_vs_TitleMean'] = df['Age'] - title_age_mean\n",
-    "    \n",
+    "\n",
     "    title_fare_mean = df.groupby('Title_Grouped')['Fare'].transform('mean')\n",
     "    df['Fare_vs_TitleMean'] = df['Fare'] - title_fare_mean\n",
-    "    \n",
+    "\n",
     "    # 6. 家族内順位特徴量\n",
     "    df['Age_Rank_in_Family'] = df.groupby('Surname')['Age'].rank(pct=True)\n",
     "    df['Fare_Rank_in_Family'] = df.groupby('Surname')['Fare'].rank(pct=True)\n",
-    "    \n",
+    "\n",
     "    # 7. 高次統計特徴量\n",
     "    df['Age_Fare_Ratio'] = df['Age'] / (df['Fare'] + 1)\n",
     "    df['Fare_Per_Family'] = df['Fare'] / df['FamilySize']\n",
-    "    \n",
+    "\n",
     "    # 8. カテゴリカル交互作用（数値化）\n",
     "    df['Sex_Embarked'] = df['Sex_Binary'].astype(str) + '_' + df['Embarked']\n",
     "    df['Title_FamilySize'] = df['Title_Grouped'] + '_' + df['FamilySize'].astype(str)\n",
-    "    \n",
+    "\n",
     "    return df\n",
     "\n",
     "print(\"=== Phase 1: 強化特徴量エンジニアリング実行 ===\")\n",
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-08-26T05:14:14.267494Z",
@@ -289,17 +289,17 @@
     "        le = LabelEncoder()\n",
     "        all_categories = pd.concat([train_processed[feature], test_processed[feature]]).astype(str)\n",
     "        le.fit(all_categories)\n",
-    "        \n",
+    "\n",
     "        train_processed[feature] = le.transform(train_processed[feature].astype(str))\n",
     "        test_processed[feature] = le.transform(test_processed[feature].astype(str))\n",
-    "        \n",
+    "\n",
     "        label_encoders[feature] = le\n",
     "        print(f\"{feature}: {len(le.classes_)} categories\")\n",
     "\n",
     "# 特徴量選択\n",
     "exclude_features = ['PassengerId', 'Name', 'Ticket', 'Cabin', 'Survived', 'Surname', 'Title', 'Sex']\n",
-    "feature_columns = [col for col in train_processed.columns \n",
-    "                  if col not in exclude_features and \n",
+    "feature_columns = [col for col in train_processed.columns\n",
+    "                  if col not in exclude_features and\n",
     "                  train_processed[col].dtype in ['int64', 'float64', 'int32', 'float32']]\n",
     "\n",
     "print(f\"\\n使用する特徴量数: {len(feature_columns)}\")\n",
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-08-26T05:14:14.277621Z",
@@ -351,53 +351,23 @@
       "=== Phase 2: 多モデル実装開始 ===\n",
       "\n",
       "🌟 Model A: LightGBM 訓練開始\n",
-      "Training until validation scores don't improve for 200 rounds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Training until validation scores don't improve for 200 rounds\n",
       "Early stopping, best iteration is:\n",
       "[120]\tvalid_0's binary_logloss: 0.338386\n",
       "Fold 1: 0.8547\n",
-      "Training until validation scores don't improve for 200 rounds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Training until validation scores don't improve for 200 rounds\n",
       "Early stopping, best iteration is:\n",
       "[61]\tvalid_0's binary_logloss: 0.376137\n",
       "Fold 2: 0.8483\n",
-      "Training until validation scores don't improve for 200 rounds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Training until validation scores don't improve for 200 rounds\n",
       "Early stopping, best iteration is:\n",
       "[52]\tvalid_0's binary_logloss: 0.433698\n",
       "Fold 3: 0.8371\n",
-      "Training until validation scores don't improve for 200 rounds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Training until validation scores don't improve for 200 rounds\n",
       "Early stopping, best iteration is:\n",
       "[77]\tvalid_0's binary_logloss: 0.405998\n",
       "Fold 4: 0.8539\n",
-      "Training until validation scores don't improve for 200 rounds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Training until validation scores don't improve for 200 rounds\n",
       "Early stopping, best iteration is:\n",
       "[56]\tvalid_0's binary_logloss: 0.370637\n",
       "Fold 5: 0.8483\n",
@@ -448,10 +418,10 @@
     "for fold, (train_idx, val_idx) in enumerate(kf.split(X, y), 1):\n",
     "    X_train, X_val = X.iloc[train_idx], X.iloc[val_idx]\n",
     "    y_train, y_val = y.iloc[train_idx], y.iloc[val_idx]\n",
-    "    \n",
+    "\n",
     "    train_data = lgb.Dataset(X_train, label=y_train)\n",
     "    val_data = lgb.Dataset(X_val, label=y_val, reference=train_data)\n",
-    "    \n",
+    "\n",
     "    model = lgb.train(\n",
     "        lgb_params,\n",
     "        train_data,\n",
@@ -459,17 +429,17 @@
     "        num_boost_round=2000,\n",
     "        callbacks=[lgb.early_stopping(200), lgb.log_evaluation(0)]\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    val_pred = model.predict(X_val)\n",
     "    test_pred = model.predict(X_test)\n",
-    "    \n",
+    "\n",
     "    fold_score = accuracy_score(y_val, (val_pred >= 0.5).astype(int))\n",
     "    lgb_scores.append(fold_score)\n",
-    "    \n",
+    "\n",
     "    lgb_oof[val_idx] = val_pred\n",
     "    lgb_test += test_pred / N_FOLDS\n",
     "    lgb_models.append(model)\n",
-    "    \n",
+    "\n",
     "    print(f\"Fold {fold}: {fold_score:.4f}\")\n",
     "\n",
     "lgb_cv_mean = np.mean(lgb_scores)\n",
@@ -487,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-08-26T05:14:19.294481Z",
@@ -501,41 +471,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🚀 Model B: XGBoost 訓練開始\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fold 1: 0.8659\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fold 2: 0.8315\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fold 3: 0.8427\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fold 4: 0.8483\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "🚀 Model B: XGBoost 訓練開始\n",
+      "Fold 1: 0.8659\n",
+      "Fold 2: 0.8315\n",
+      "Fold 3: 0.8427\n",
+      "Fold 4: 0.8483\n",
       "Fold 5: 0.8371\n",
       "XGBoost CV: 0.8451 ± 0.0118\n",
       "XGBoost OOF: 0.8451\n",
@@ -569,10 +509,10 @@
     "for fold, (train_idx, val_idx) in enumerate(kf.split(X, y), 1):\n",
     "    X_train, X_val = X.iloc[train_idx], X.iloc[val_idx]\n",
     "    y_train, y_val = y.iloc[train_idx], y.iloc[val_idx]\n",
-    "    \n",
+    "\n",
     "    train_data = xgb.DMatrix(X_train, label=y_train)\n",
     "    val_data = xgb.DMatrix(X_val, label=y_val)\n",
-    "    \n",
+    "\n",
     "    model = xgb.train(\n",
     "        xgb_params,\n",
     "        train_data,\n",
@@ -581,17 +521,17 @@
     "        early_stopping_rounds=200,\n",
     "        verbose_eval=0\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    val_pred = model.predict(xgb.DMatrix(X_val))\n",
     "    test_pred = model.predict(xgb.DMatrix(X_test))\n",
-    "    \n",
+    "\n",
     "    fold_score = accuracy_score(y_val, (val_pred >= 0.5).astype(int))\n",
     "    xgb_scores.append(fold_score)\n",
-    "    \n",
+    "\n",
     "    xgb_oof[val_idx] = val_pred\n",
     "    xgb_test += test_pred / N_FOLDS\n",
     "    xgb_models.append(model)\n",
-    "    \n",
+    "\n",
     "    print(f\"Fold {fold}: {fold_score:.4f}\")\n",
     "\n",
     "xgb_cv_mean = np.mean(xgb_scores)\n",
@@ -609,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-08-26T05:14:22.004456Z",
@@ -623,41 +563,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🐱 Model C: CatBoost 訓練開始\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fold 1: 0.8715\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fold 2: 0.8652\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fold 3: 0.8258\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fold 4: 0.8258\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "🐱 Model C: CatBoost 訓練開始\n",
+      "Fold 1: 0.8715\n",
+      "Fold 2: 0.8652\n",
+      "Fold 3: 0.8258\n",
+      "Fold 4: 0.8258\n",
       "Fold 5: 0.8315\n",
       "CatBoost CV: 0.8440 ± 0.0201\n",
       "CatBoost OOF: 0.8440\n",
@@ -696,9 +606,9 @@
     "for fold, (train_idx, val_idx) in enumerate(kf.split(X, y), 1):\n",
     "    X_train, X_val = X.iloc[train_idx], X.iloc[val_idx]\n",
     "    y_train, y_val = y.iloc[train_idx], y.iloc[val_idx]\n",
-    "    \n",
+    "\n",
     "    model = cb.CatBoostClassifier(**cb_params)\n",
-    "    \n",
+    "\n",
     "    model.fit(\n",
     "        X_train, y_train,\n",
     "        eval_set=(X_val, y_val),\n",
@@ -706,17 +616,17 @@
     "        use_best_model=True,\n",
     "        plot=False\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    val_pred = model.predict_proba(X_val)[:, 1]\n",
     "    test_pred = model.predict_proba(X_test)[:, 1]\n",
-    "    \n",
+    "\n",
     "    fold_score = accuracy_score(y_val, (val_pred >= 0.5).astype(int))\n",
     "    cb_scores.append(fold_score)\n",
-    "    \n",
+    "\n",
     "    cb_oof[val_idx] = val_pred\n",
     "    cb_test += test_pred / N_FOLDS\n",
     "    cb_models.append(model)\n",
-    "    \n",
+    "\n",
     "    print(f\"Fold {fold}: {fold_score:.4f}\")\n",
     "\n",
     "cb_cv_mean = np.mean(cb_scores)\n",
@@ -741,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-08-26T05:14:28.352428Z",
@@ -803,11 +713,11 @@
     "weights = np.array([cv_scores['LightGBM']['oof'], cv_scores['XGBoost']['oof'], cv_scores['CatBoost']['oof']])\n",
     "weights = weights / weights.sum()\n",
     "\n",
-    "weighted_avg_oof = (weights[0] * oof_predictions['LightGBM'] + \n",
-    "                   weights[1] * oof_predictions['XGBoost'] + \n",
+    "weighted_avg_oof = (weights[0] * oof_predictions['LightGBM'] +\n",
+    "                   weights[1] * oof_predictions['XGBoost'] +\n",
     "                   weights[2] * oof_predictions['CatBoost'])\n",
-    "weighted_avg_test = (weights[0] * test_predictions['LightGBM'] + \n",
-    "                    weights[1] * test_predictions['XGBoost'] + \n",
+    "weighted_avg_test = (weights[0] * test_predictions['LightGBM'] +\n",
+    "                    weights[1] * test_predictions['XGBoost'] +\n",
     "                    weights[2] * test_predictions['CatBoost'])\n",
     "weighted_avg_score = accuracy_score(y, (weighted_avg_oof >= 0.5).astype(int))\n",
     "ensemble_results['Weighted Average'] = {'oof': weighted_avg_score, 'test': weighted_avg_test}\n",
@@ -867,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-08-26T05:14:28.364509Z",
@@ -994,7 +904,7 @@
     "# モデル間の相関分析\n",
     "correlation_matrix = pd.DataFrame({\n",
     "    'LightGBM': oof_predictions['LightGBM'],\n",
-    "    'XGBoost': oof_predictions['XGBoost'], \n",
+    "    'XGBoost': oof_predictions['XGBoost'],\n",
     "    'CatBoost': oof_predictions['CatBoost']\n",
     "}).corr()\n",
     "\n",
@@ -1002,7 +912,7 @@
     "print(correlation_matrix.round(4))\n",
     "\n",
     "plt.figure(figsize=(8, 6))\n",
-    "sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm', center=0, \n",
+    "sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm', center=0,\n",
     "            square=True, fmt='.4f')\n",
     "plt.title('モデル間予測相関')\n",
     "plt.show()"
@@ -1017,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-08-26T05:14:28.561368Z",
@@ -1092,7 +1002,7 @@
     "# これまでの実験との比較\n",
     "exp_comparison = {\n",
     "    'exp001 (ベースライン)': {'kaggle': 0.77272, 'cv': 0.8496},\n",
-    "    'exp004 (特徴量ENG)': {'kaggle': 0.77990, 'cv': 0.8451}, \n",
+    "    'exp004 (特徴量ENG)': {'kaggle': 0.77990, 'cv': 0.8451},\n",
     "    'exp005 (アンサンブル)': {'kaggle': '???', 'cv': final_oof_score}\n",
     "}\n",
     "\n",
@@ -1145,11 +1055,18 @@
     "print(\"🚀 提出準備完了！Kaggleでの結果をお楽しみに！\")\n",
     "print(\"=\"*60)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "titanic",
    "language": "python",
    "name": "python3"
   },
